samples/_failures_safe/1761329312_be1cef_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5047361d.c: In function ‘main’:
./samples/SAFE/__tmp_5047361d.c:172:13: error: expected declaration or statement at end of input
  172 |             break;
      |             ^~~~~
./samples/SAFE/__tmp_5047361d.c:172:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_5047361d.c:172:13: error: expected declaration or statement at end of input
